--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
                       <dt><a href = "/">Workshop Goals</a></dt>
               </dl>
               </nav>
+              <div class = "container">
+              <div class  = "blurb">
+                  <h1>Combining Toolboxes</h1>
+                  <p>Welcome to the Combining Toolboxes workshop! </p>
+              </div><!-- /.blurb-->
+              </div><!--/.container -->
       </body>
 </html>
               
