--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
       </head>
       <body>
               <nav>
-              <dl>
-                      <dt><a href = "/">Home</a></dt>
-                      <dt><a href = "/">About Us</a></dt>
-                      <dt><a href = "/">Workshop Goals</a></dt>
-              </dl>
+              <ul>
+                      <li><a href = "/">Home</a></dt>
+                      <li><a href = "/">About Us</a></dt>
+                      <li><a href = "/">Workshop Goals</a></dt>
+              </ul>
               </nav>
               <div class = "container">
               <div class  = "blurb">
