Revert "Update index.html"
This reverts commit 630f293590769df60536859bf5e66cd081ce2a79.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
----
-layout: default
-title: Combining Toolboxes
----
-<div class  = "blurb">
-      <h1>Combining Toolboxes</h1>
-      <p>Welcome to the Combining Toolboxes workshop! </p>
-</div><!-- /.blurb-->
-             
+
+<!DOCTYPE html>
+<html>
+      <head>
+             <title>Combining Toolboxes</title>
+             <!-- link to main stylesheet -->
+             <link rel="stylesheet" type = "text/css" href="/css/main.css">
+      </head>
+      <body>
+              <nav>
+              <ul>
+                      <li><a href = "/">Home</a></dt>
+                      <li><a href = "/">About Us</a></dt>
+                      <li><a href = "/">Workshop Goals</a></dt>
+              </ul>
+              </nav>
+              <div class = "container">
+              <div class  = "blurb">
+                  <h1>Combining Toolboxes</h1>
+                  <p>Welcome to the Combining Toolboxes workshop! </p>
+              </div><!-- /.blurb-->
+              </div><!--/.container -->
+      </body>
+</html>
+              
