--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
               <nav>
               <ul>
                       <li><a href = "/">Home</a></dt>
-                      <li><a href = "/">About Us</a></dt>
+                      <li><a href = "/about.html">About Us</a></dt>
                       <li><a href = "/">Workshop Goals</a></dt>
               </ul>
               </nav>
