--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 <html>
       <head>
             <title>About Us</title>
+	    <!-- link to main stylesheet -->
+            <link rel="stylesheet" type = "text/css" href="/css/main.css">
       </head>
       <body>
 		        <nav>
@@ -15,9 +17,9 @@
     		      <div class="blurb">
         		          <h2>Who we are</h2>
                       <p>stuff about us again</p>
-                      <h2>Our Motivation<h2>
+                      <h2>Our Motivation</h2>
                       <p>more stuff about us</p>
     		      </div><!-- /.blurb -->
-		          </div><!-- /.container -->
+		      </div><!-- /.container -->
       </body>
 </html>
