--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 		        <nav>
     		            <ul>
                             <li><a href="/">Home</a></li>
+			    <li><a href="/about.html">About Us</a></li>    
                             <li><a href="/">Workshop Goals</a></li>
 
     		            </ul>
