--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     		            <ul>
                             <li><a href="/">Home</a></li>
 			    <li><a href="/about.html">About Us</a></li>    
-                            <li><a href="/">Workshop Goals</a></li>
+                            <li><a href="/workshop.html">Workshop Goals</a></li>
 
     		            </ul>
 		        </nav>
