--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
               <ul>
                       <li><a href = "/">Home</a></dt>
                       <li><a href = "/about.html">About Us</a></dt>
-                      <li><a href = "/">Workshop Goals</a></dt>
+                      <li><a href = "/workshop.html">Workshop Goals</a></dt>
               </ul>
               </nav>
               <div class = "container">
