--- a/about.html
+++ b/about.html
@@ -14,12 +14,15 @@
 
     		            </ul>
 		        </nav>
-		          <div class="container">
+		      <div class="container">
     		      <div class="blurb">
-        		          <h2>Who we are</h2>
-                      <p>stuff about us again</p>
-                      <h2>Our Motivation</h2>
-                      <p>more stuff about us</p>
+        		        <h2>Who We Are</h2>
+			      	<h3>Pamela Shea</h3>
+                      		<p>Pamela Shea is a full time professor for the Honours Degree in Behavioural Psychology Program at St. Lawrence College and is a Board Certified Behaviour Analyst. She received her Master’s in Applied Disability from Brock University, Graduate Certificate of Behaviour Analysis from the University of North Texas, her Undergraduate Honours Degree in Psychology at Queens University, and a diploma in Behaviour Science Technology at St. Lawrence College.  Pamela is committed to the field of Applied Behaviour Analysis and a long standing member of the Ontario Association of Behaviour Analysis. Pamela has spoken at a number of conferences on topics such as motivation, anxiety, sexuality and development of a best practice model of providing community based behavioural services. Pamela has worked as a Clinical Supervisor at CHEO-Ottawa Children’s Treatment Centre.  She supervised the IBI program run out of the Children’s Hospital of Eastern Ontario and worked as a Behavioural Consultant at Ottawa Children’s Treatment Centre and Lake Ridge Community Support Services. She is committed to the dissemination of Applied Behaviour Analysis through the education, and mentorship of students in the field. She has supervised many BCBA candidates. Pam is a co-author of two books on the Supervision Curriculum for BCBA. Pamela is also interested in using Applied Behaviour Analysis to tackle world issues such as discrimination and environmental issues.</p>
+                      		<h3>Kaela Shea</h3>
+			      	<p>Kaela Shea, a Doctoral Candidate with the University of Toronto, has experience applying engineering tools to varied and diverse systems.  She obtained her masters of applied sciences at the Neural and Rehabilitation Engineering Lab with the University of Waterloo, applying engineering techniques to cognitive load theory in leveraging EEG technology for the analysis of cognitive load during gait. Kaela is currently researching at the Holland Bloorview Kids Rehabilitation Hospital. A background in Biomedical Engineering with a specialization in signal processing and system analysis has provided Kaela with insight into user centered design and a passion for the powerful application of engineering tools of innovation, creativity, and design to various systems.</p3>
+			      	<h2>Our Motivation</h2>
+                      		<p>more stuff about us</p>
     		      </div><!-- /.blurb -->
 		      </div><!-- /.container -->
       </body>
