--- a/workshop.html
+++ b/workshop.html
@@ -2,25 +2,41 @@
 <html>
       <head>
             <title>Workshop Goals</title>
-	          <!-- link to main stylesheet -->
+	    <!-- link to main stylesheet -->
             <link rel="stylesheet" type = "text/css" href="/css/main.css">
       </head>
       <body>
-		        <nav>
-    		            <ul>
-                            <li><a href="/">Home</a></li>
-			                      <li><a href="/about.html">About Us</a></li>    
-                            <li><a href="/workshop">Workshop Goals</a></li>
-
-    		            </ul>
-		        </nav>
-		        <div class="container">
-    		    <div class="blurb">
-        		       <h2>The structure</h2>
-                   <p>stuff about how we're running it</p>
-                   <h2>The Outcomes</h2>
-                   <p>information</p>
-    		    </div><!-- /.blurb -->
-		        </div><!-- /.container -->
+          <nav>
+    		<ul>
+                <li><a href="/">Home</a></li>
+		<li><a href="/about.html">About Us</a></li>    
+                <li><a href="/workshop">Workshop Goals</a></li>
+	        </ul>
+	  </nav>
+		<div class="container">
+    		<div class="blurb">
+        	<h2>The Structure</h2>
+                   <table>
+			   <tr>
+			        <th>1</th>
+				<th>Toolbox Sharing</th>
+				<th>Organizers Presentation</th>
+			   </tr>
+		           <tr>
+				<th>2</th>
+				<th>Target Challange</th>
+				<th>Organizer Presentation</th>
+			   </tr>
+			   <tr>
+				<th>3</th>
+				<th>Concept Map Design</th>
+				<th>Collaborative Activity</th>
+			   </tr>   
+		   </table>
+                <h2>The Outcomes</h2>
+                   <p>Our development of the workshop, Combining Toolboxes, will strongly impact all major players in persuasive technology design through combining the most powerful tools of each discipline to analyze and design solutions for a specific target challenge.</p> 
+	<p>Combining Toolboxes will offer unique insight into theories, methodologies, and design perspectives unique to the fields of engineering and behavioural analysts, and how each discipline’s tools can be transferred across disciplines to build powerful and uniquely innovative solutions in persuasive technology. Participants of the Combining Toolboxes workshop will come away with a detailed concept map of an inter-disciplinary approach to a target challenge.</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
       </body>
 </html>
