--- a/workshop.html
+++ b/workshop.html
@@ -18,19 +18,19 @@
         	<h2>The Structure</h2>
                    <table>
 			   <tr>
-			        <th>1</th>
-				<th>Toolbox Sharing</th>
-				<th>Organizers Presentation</th>
+			        <td>1</td>
+				<td>Toolbox Sharing</td>
+				<td>Organizers Presentation</td>
 			   </tr>
 		           <tr>
-				<th>2</th>
-				<th>Target Challange</th>
-				<th>Organizer Presentation</th>
+				<td>2</td>
+				<td>Target Challange</td>
+				<td>Organizer Presentation</td>
 			   </tr>
 			   <tr>
-				<th>3</th>
-				<th>Concept Map Design</th>
-				<th>Collaborative Activity</th>
+				<td>3</td>
+				<td>Concept Map Design</td>
+				<td>Collaborative Activity</td>
 			   </tr>   
 		   </table>
                 <h2>The Outcomes</h2>
