--- a/workshop.html
+++ b/workshop.html
@@ -18,6 +18,11 @@
         	<h2>The Structure</h2>
                    <table>
 			   <tr>
+				<th>Activity</th>
+				<th>Name</th>
+				<th>Description</th>
+			   </tr>
+			   <tr>
 			        <td>1</td>
 				<td>Toolbox Sharing</td>
 				<td>Organizers Presentation</td>
