--- a/workshop.html
+++ b/workshop.html
@@ -23,11 +23,11 @@
 			   </tr>
 			   <tr>
 				<td>Toolbox Sharing</td>
-				<td>Organizers Presentation</td>
+				<td>Organizer's Presentation</td>
 			   </tr>
 		           <tr>
 				<td>Target Challange</td>
-				<td>Organizer Presentation</td>
+				<td>Organizer's Presentation</td>
 			   </tr>
 			   <tr>
 				<td>Concept Map Design</td>
