--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
               <ul>
                       <li><a href = "/">Home</a></dt>
                       <li><a href = "/about.html">About Us</a></dt>
-                      <li><a href = "/workshop.html">Workshop Goals</a></dt>
+                      <li><a href = "/workshop.html">Tutorial Goals</a></dt>
               </ul>
               </nav>
               <div class = "container">
               <div class  = "blurb">
                   <h1>Combining Toolboxes</h1>
-                  <p>Welcome to the Combining Toolboxes workshop! </p>
+                  <p>Welcome to the Combining Toolboxes tutorial! </p>
               </div><!-- /.blurb-->
               </div><!--/.container -->
       </body>
