--- a/workshop.html
+++ b/workshop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
       <head>
-            <title>Workshop Goals</title>
+            <title>Tutorial Goals</title>
 	    <!-- link to main stylesheet -->
             <link rel="stylesheet" type = "text/css" href="/css/main.css">
       </head>
@@ -10,7 +10,7 @@
     		<ul>
                 <li><a href="/">Home</a></li>
 		<li><a href="/about.html">About Us</a></li>    
-                <li><a href="/workshop">Workshop Goals</a></li>
+                <li><a href="/workshop">Tutorial Goals</a></li>
 	        </ul>
 	  </nav>
 		<div class="container">
@@ -35,7 +35,7 @@
 			   </tr>   
 		   </table>
                 <h2>The Outcomes</h2>
-                   <p>Our development of the workshop, Combining Toolboxes, will strongly impact all major players in persuasive technology design through combining the most powerful tools of each discipline to analyze and design solutions for a specific target challenge.</p> 
+                   <p>Our development of the tutorial, Combining Toolboxes, will strongly impact all major players in persuasive technology design through combining the most powerful tools of each discipline to analyze and design solutions for a specific target challenge.</p> 
 	<p>Combining Toolboxes will offer unique insight into theories, methodologies, and design perspectives unique to the fields of engineering and behavioural analysts, and how each discipline’s tools can be transferred across disciplines to build powerful and uniquely innovative solutions in persuasive technology. Participants of the Combining Toolboxes workshop will come away with a detailed concept map of an inter-disciplinary approach to a target challenge.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
