--- a/outcomes.html
+++ b/outcomes.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
       <head>
+            <title>About Us</title>
+	      <!-- link to main stylesheet -->
+            <link rel="stylesheet" type = "text/css" href="/css/main.css">
       </head>
       <body>
+            
       </body>
