--- a/outcomes.html
+++ b/outcomes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
       <head>
-            <title>About Us</title>
+            <title>Tutorial Outcomes</title>
 	      <!-- link to main stylesheet -->
             <link rel="stylesheet" type = "text/css" href="/css/main.css">
       </head>
