--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
       <div class = "fields">
          <nav>
           <ul>
-                <li>a href = "/signUp.html">Health Care</a></dt>
-                <li>a href = "/signUp.html">Manufacturing</a></dt>
-                <li>a href = "/signUp.html">Energy</a></dt>
-                <li>a href = "/signUp.html">Defence</a></dt>
-                <li>a href = "/signUp.html">Transport</a></dt>
-                <li>a href = "/signUp.html">Office</a></dt>
+                <li><a href = "/signUp.html">Health Care</a></dt>
+                <li><a href = "/signUp.html">Manufacturing</a></dt>
+                <li><a href = "/signUp.html">Energy</a></dt>
+                <li><a href = "/signUp.html">Defence</a></dt>
+                <li><a href = "/signUp.html">Transport</a></dt>
+                <li><a href = "/signUp.html">Office</a></dt>
           </ul>
          </nav>
       </div>
