--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             
       <nav>
           <ul>
-              <li><a href = "/">Home</a></dt>
-              <li><a href = "/about.html">About Us</a></dt>
-              <li><a href = "/workshop.html">Schedule</a></dt>
-              <li><a href = "/outcomes.html">Outcomes</a></dt>
-              <li><a href = "/signUp.html">Join Us</a></dt>
+              <li><a href = "/">Home</a></li>
+              <li><a href = "/about.html">About Us</a></li>
+              <li><a href = "/workshop.html">Schedule</a></li>
+              <li><a href = "/outcomes.html">Outcomes</a></li>
+              <li><a href = "/signUp.html">Join Us</a></li>
           </ul>
       </nav>
 
@@ -30,8 +30,8 @@
       <div class = "background">
          <nav>   
             <ul>
-                  <li><a href = "/aba.html">What is Applied Behavioural Analysis?</a></dt>
-                  <li><a href = "/engg.html">What is Engineering?</a></dt>
+                  <li><a href = "/aba.html">What is Applied Behavioural Analysis?</a></li>
+                  <li><a href = "/engg.html">What is Engineering?</a></li>
             </ul>
          </nav>
       </div>
@@ -39,12 +39,12 @@
       <div class = "fields">
          <nav>
           <ul>
-                <li><a href = "/signUp.html">Health Care</a></dt>
-                <li><a href = "/signUp.html">Manufacturing</a></dt>
-                <li><a href = "/signUp.html">Energy</a></dt>
-                <li><a href = "/signUp.html">Defence</a></dt>
-                <li><a href = "/signUp.html">Transport</a></dt>
-                <li><a href = "/signUp.html">Office</a></dt>
+                <li><a href = "/signUp.html"> Health Care</a></li>
+                <li><a href = "/signUp.html"> Manufacturing</a></li>
+                <li><a href = "/signUp.html"> Energy</a></li>
+                <li><a href = "/signUp.html"> Defence</a></li>
+                <li><a href = "/signUp.html"> Transport</a></li>
+                <li><a href = "/signUp.html"> Office</a></li>
           </ul>
          </nav>
       </div>
