--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
       <div class = "fields">
          <nav>
           <ul>
-                <li><a href = "/signUp.html"> Health Care</a></li>
-                <li><a href = "/signUp.html"> Manufacturing</a></li>
-                <li><a href = "/signUp.html"> Energy</a></li>
-                <li><a href = "/signUp.html"> Defence</a></li>
-                <li><a href = "/signUp.html"> Transport</a></li>
-                <li><a href = "/signUp.html"> Office</a></li>
+                <li><a class = "fields" href = "/signUp.html"> Health Care</a></li>
+                <li><a class = "fields" href = "/signUp.html"> Manufacturing</a></li>
+                <li><a class = "fields" href = "/signUp.html"> Energy</a></li>
+                <li><a class = "fields" href = "/signUp.html"> Defence</a></li>
+                <li><a class = "fields" href = "/signUp.html"> Transport</a></li>
+                <li><a class = "fields" href = "/signUp.html"> Office</a></li>
           </ul>
          </nav>
       </div>
