--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       <body>
             
       <div class = "header">
-          <p>Combining Toolboxes</p><br>
-          <p>17 April 2017</p><br>
-          <p>9 to 12:30<p><br>
+          <h1>Combining Toolboxes</h1>
+          <h1>17 April 2017</h1>
+          <h1>9 to 12:30</h1>
       </div>
             
       <nav>
