--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
 
       <div class = "slogan">
-          <p>Welcome to the Combining Toolboxes tutorial, a field traveler's guide</p>
+          <h2>Welcome to the Combining Toolboxes tutorial; a field traveler's guide</h2>
       </div>      
       
       <div class = "background">
