--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <h1>17 April 2017</h1>
           <h1>9 to 12:30</h1>
       </div>
-            
+      <div class = "menu">      
       <nav>
           <ul>
               <li><a href = "/">Home</a></li>
@@ -22,6 +22,7 @@
               <li><a href = "/signUp.html">Join Us</a></li>
           </ul>
       </nav>
+      </div>
 
       <div class = "slogan">
           <h2>Welcome to the Combining Toolboxes tutorial; a field traveler's guide</h2>
