--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
              <link rel="stylesheet" type = "text/css" href="/css/main.css">
       </head>
       <body>
-            
+      <div class= "clearfix">      
       <div class = "header">
           <h1>Combining Toolboxes</h1>
           <h1>17 April 2017</h1>
@@ -23,7 +23,7 @@
           </ul>
       </nav>
       </div>
-
+      </div>
       <div class = "slogan">
           <h2>Welcome to the Combining Toolboxes tutorial; a field traveler's guide</h2>
       </div>      
