--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       <body>
       <div class= "clearfix">      
       <div class = "header">
-          <h1>Combining Toolboxes</h1>
-          <h1>17 April 2017</h1>
-          <h1>9 to 12:30</h1>
+          <h1>Combining Toolboxes<br>
+          17 April 2017<br>
+          9 to 12:30</h1>
       </div>
       <div class = "menu">      
       <nav>
