--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       </div>
       <div class = "slogan">
-          <h2>Welcome to the Combining Toolboxes tutorial; a field traveler's guide</h2>
+          <h2>Welcome to the Combining Toolboxes tutorial <br> a field traveler's guide</h2>
       </div>      
       
       <div class = "background">
