--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       <body>
       <div class= "clearfix">      
       <div class = "header">
-          <h1>Combining Toolboxes<br>
-          17 April 2017<br>
-          9 to 12:30</h1>
+          <h1>Combining Toolboxes</h1>
+          <p>17 April 2017<br>
+          9 to 12:30</p>
       </div>
       <div class = "menu">      
       <nav>
@@ -42,7 +42,7 @@
           <ul>
                 <li><a class = "fields" href = "/signUp.html"> Health Care</a></li>
                 <li><a class = "fields" href = "/signUp.html"> Manufacturing</a></li>
-                <li><a class = "fields" href = "/signUp.html"> Energy</a></li>
+                <li><a class = "fields" href = "/signUp.html"> Energy</a></li><br>
                 <li><a class = "fields" href = "/signUp.html"> Defence</a></li>
                 <li><a class = "fields" href = "/signUp.html"> Transport</a></li>
                 <li><a class = "fields" href = "/signUp.html"> Office</a></li>
