--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
       <body>
       <div class= "clearfix">      
       <div class = "header">
-          <h1>Combining Toolboxes</h1>
-          <p>17 April 2017<br>
-          9 to 12:30</p>
+          <h1>17 April 2017<br> 9 to 12:30</h1>
       </div>
       <div class = "menu">      
       <nav>
@@ -25,7 +23,7 @@
       </div>
       </div>
       <div class = "slogan">
-          <h2>Welcome to the Combining Toolboxes tutorial <br> a field traveler's guide</h2>
+          <h2>Welcome to the <b>Combining Toolboxes</b> tutorial <br> a field traveler's guide</h2>
       </div>      
       
       <div class = "background">
