--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       </head>
       <body>
       <div class= "clearfix">      
-      <div class = "header">
-          <h1>17 April 2017<br> 9 to 12:30</h1>
+      <div class = "header">            
+          <h1>Combining Toolboxes<br>17 April 2017<br> 9 to 12:30</h1>
       </div>
       <div class = "menu">      
       <nav>
