--- a/index.html
+++ b/index.html
@@ -29,22 +29,9 @@
       <div class = "background">
          <nav>   
             <ul>
-                  <li><a href = "/aba.html">What is Applied Behavioural Analysis?</a></li>
-                  <li><a href = "/engg.html">What is Engineering?</a></li>
+                  <li><a class = "bkgrd" href = "/aba.html">What is Applied Behavioural Analysis?</a></li>
+                  <li><a class = "bkgrd" href = "/engg.html">What is Engineering?</a></li>
             </ul>
-         </nav>
-      </div>
-
-      <div class = "fields">
-         <nav>
-          <ul>
-                <li><a class = "fields" href = "/signUp.html"> Health Care</a></li>
-                <li><a class = "fields" href = "/signUp.html"> Manufacturing</a></li>
-                <li><a class = "fields" href = "/signUp.html"> Energy</a></li><br>
-                <li><a class = "fields" href = "/signUp.html"> Defence</a></li>
-                <li><a class = "fields" href = "/signUp.html"> Transport</a></li>
-                <li><a class = "fields" href = "/signUp.html"> Office</a></li>
-          </ul>
          </nav>
       </div>
       
