--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       </div>
       <div class = "slogan">
-          <h2>welcome to the Combining Toolboxes tutorial <br> a field traveler's guide</h2>
+          <h2>a field traveler's guide</h2>
       </div>      
       
       <div class = "background">
