--- a/about.html
+++ b/about.html
@@ -6,26 +6,29 @@
             <link rel="stylesheet" type = "text/css" href="/css/main.css">
       </head>
       <body>
-		        <nav>
-    		            <ul>
-                            <li><a href="/">Home</a></li>
-			    <li><a href="/about.html">About Us</a></li>    
-                            <li><a href="/workshop.html">Tutorial Goals</a></li>
+	      <div class= "clearfix">      
+              <div class = "header"> 
+		      <h1>Combining Toolboxes<br>17 April 2017<br> 09:00 - 12:30</h1>
+              </div>
+              <div class = "menu"> 
+		      <nav>
+			      <ul>
+				      <li><a href = "/">Home</a></li>
+				      <li><a href = "/about.html">About Us</a></li>
+				      <li><a href = "/workshop.html">Schedule</a></li>
+				      <li><a href = "/outcomes.html">Outcomes</a></li>
+				      <li><a href = "/signUp.html">Join Us</a></li>
+                              </ul>
+      		      </nav>
+      	      </div>
+              <div class = "slogan">
+		      <h2>Pamel Shea</h2>
+              </div>
+	      <p> Pamela Shea is a full time professor for the Honours Degree in Behavioural Psychology Program at St. Lawrence College and is a Board Certified Behaviour Analyst.</p><p>She is committed to the field of Applied Behaviour Analysis and a long standing member of the Ontario Association of Behaviour Analysis. Pamela has spoken at a number of conferences on topics such as motivation, anxiety, sexuality and development of a best practice model of providing community based behavioural services. Pamela has worked as a Clinical Supervisor at CHEO-Ottawa Children’s Treatment Centre. She supervised the IBI program run out of the Children’s Hospital of Eastern Ontario and worked as a Behavioural Consultant at Ottawa Children’s Treatment Centre and Lake Ridge Community Support Services. She is committed to the dissemination of Applied Behaviour Analysis through the education, and mentorship of students in the field. She has supervised many BCBA candidates. Pam is a co-author of two books on the Supervision Curriculum for BCBA. Pamela is also interested in using Applied Behaviour Analysis to tackle world issues such as discrimination and environmental issues.</p>
+              <div class = "slogan">
+		      <h2>Kaela Shea</h2>
+              </div>
+		      <p>Kaela Shea, a Doctoral Candidate with the University of Toronto, has experience applying engineering tools to varied and diverse systems. Kaela is currently researching at the Holland Bloorview Kids Rehabilitation Hospital. She is a passion for the powerful application of engineering tools of innovation, creativity, and design to various systems.</p>
 
-    		            </ul>
-		        </nav>
-		      <div class="container">
-    		      <div class="blurb">
-        		        <h2>Who We Are</h2>
-			      	<h3>Pamela Shea</h3>
-                      		<p>Pamela Shea is a full time professor for the Honours Degree in Behavioural Psychology Program at St. Lawrence College and is a Board Certified Behaviour Analyst. She received her Master’s in Applied Disability from Brock University, Graduate Certificate of Behaviour Analysis from the University of North Texas, her Undergraduate Honours Degree in Psychology at Queens University, and a diploma in Behaviour Science Technology at St. Lawrence College.</p>
-			      <p>Pamela is committed to the field of Applied Behaviour Analysis and a long standing member of the Ontario Association of Behaviour Analysis. Pamela has spoken at a number of conferences on topics such as motivation, anxiety, sexuality and development of a best practice model of providing community based behavioural services. Pamela has worked as a Clinical Supervisor at CHEO-Ottawa Children’s Treatment Centre. She supervised the IBI program run out of the Children’s Hospital of Eastern Ontario and worked as a Behavioural Consultant at Ottawa Children’s Treatment Centre and Lake Ridge Community Support Services. She is committed to the dissemination of Applied Behaviour Analysis through the education, and mentorship of students in the field. She has supervised many BCBA candidates. Pam is a co-author of two books on the Supervision Curriculum for BCBA. Pamela is also interested in using Applied Behaviour Analysis to tackle world issues such as discrimination and environmental issues.</p>
-                      		<h3>Kaela Shea</h3>
-			      	<p>Kaela Shea, a Doctoral Candidate with the University of Toronto, has experience applying engineering tools to varied and diverse systems. She obtained her Masters of Applied Sciences at the Neural and Rehabilitation Engineering Lab with the University of Waterloo, applying engineering techniques to cognitive load theory in leveraging EEG technology for the analysis of cognitive load during gait. Kaela is currently researching at the Holland Bloorview Kids Rehabilitation Hospital. A background in Biomedical Engineering with a specialization in Signal Processing and System Analysis has provided Kaela with insight into user centered design and a passion for the powerful application of engineering tools of innovation, creativity, and design to various systems.</p>
-			      <p> Kaela is dedicated to the field of engineering and have become very involved in her local chapter of Professional Engineers of Ontario through the Government Liasion Program, and the Engineering In Training Committee.</p> 
-			      	<h2>Our Motivation</h2>
-                      		<p> Applied Behavioural Analysis prides itself in solving socially important problems and has produced powerful interventions in fields such as autism, developmental disabilities, education, clinical psychology, and organizational behaviour management. However, there exists limitations in behavioural observation and intervention tools avaliable in the field of Behavioural Analysis. One way to successfully mitigate these barieres is working in collaboration with other fields to develop sophisticated technology to tackle the challenging complex issue of today’s world. Combining the most powerful tools of Engineering and Behavioural Analysis to target specific challenges is way of bridging deficits within the fields. The fields of engineering and behavioural analysis are diverse with many impactful potential for collaboration. To encourage focused and constructive discussion, the Combining Toolboxes tutorial will be presented.</p>
-    		      </div><!-- /.blurb -->
-		      </div><!-- /.container -->
       </body>
 </html>
