--- a/workshop.html
+++ b/workshop.html
@@ -6,35 +6,54 @@
             <link rel="stylesheet" type = "text/css" href="/css/main.css">
       </head>
       <body>
-          <nav>
-    		<ul>
-                <li><a href="/">Home</a></li>
-		<li><a href="/about.html">About Us</a></li>    
-                <li><a href="/workshop">Tutorial Goals</a></li>
-	        </ul>
-	  </nav>
-		<div class="container">
-    		<div class="blurb">
-        	<h2>The Structure</h2>
+      <div class= "clearfix">      
+      <div class = "header">            
+          <h1>Combining Toolboxes<br>17 April 2017<br> 9 to 12:30</h1>
+      </div>
+      <div class = "menu">      
+      <nav>
+          <ul>
+              <li><a href = "/">Home</a></li>
+              <li><a href = "/about.html">About Us</a></li>
+              <li><a href = "/workshop.html">Schedule</a></li>
+              <li><a href = "/outcomes.html">Outcomes</a></li>
+              <li><a href = "/signUp.html">Join Us</a></li>
+          </ul>
+      </nav>
+      </div>
+      </div>
+      <div class = "slogan">
+          <h2>Structure</h2>
+      </div>
                    <table>
 			   <tr>
 				<th>Activity</th>
 				<th>Description</th>
 			   </tr>
 			   <tr>
-				<td>Toolbox Sharing</td>
-				<td>Organizer's Presentation</td>
+				<td>Coffee & Introductions</td>
+				<td>Grab a drink and take a seat! You will be divided in small groups to facilitate dicussion and introductions.</td>
 			   </tr>
 		           <tr>
-				<td>Target Challange</td>
-				<td>Organizer's Presentation</td>
+				<td>Presentation, Challange Framing, & Questions</td>
+				<td>Organizers will deliver a presentation outlining strategies for interdiciplinary teams, as well as a detailed road map on an Applied Behavioural Analyst's approach to a target challenge.</td>
 			   </tr>
 			   <tr>
 				<td>Concept Map Design</td>
-				<td>Collaborative Activity</td>
-			   </tr>   
+				<td>You will be presented with a target challenge, drawn from real life experiences, that highlights collaboration potential. You will be provided a 'Pro' licence to Mind Meister to facilitate brainstorming.</td>
+			   </tr>
+			   <tr>
+				   <td>Facilitated Networking</td>
+				   <td>Using data <a href = "/signUp.html">provided</a> networking will be facilitated based on your research interests: not background, not field, and not insitution!</td>
+			   </tr>
+			   <tr>
+				   <td>Integrated Approach</td>
+				   <td>Amalgamating concept maps designed from all the groups in the tutorial, the organizers will present an approach for the target challenge developed through integrating Applied Behavioural Analysis, and Engineering.</td> 
+		  	    </tr>
 		   </table>
-                <h2>The Outcomes</h2>
+      <div class = "slogan">
+          <h2>Motivation</h2>
+      </div>
                    <p>Our development of the tutorial, Combining Toolboxes, will strongly impact all major players in persuasive technology design through combining the most powerful tools of each discipline to analyze and design solutions for a specific target challenge.</p> 
 	<p>Combining Toolboxes will offer unique insight into theories, methodologies, and design perspectives unique to the fields of engineering and behavioural analysts, and how each discipline’s tools can be transferred across disciplines to build powerful and uniquely innovative solutions in persuasive technology. Participants of the Combining Toolboxes tutorial will come away with a detailed concept map of an inter-disciplinary approach to a target challenge.</p>
     		</div><!-- /.blurb -->
