--- a/signUp.html
+++ b/signUp.html
@@ -6,6 +6,26 @@
             <link rel="stylesheet" type = "text/css" href="/css/main.css">
       </head>
       <body>
-            
+      <div class= "clearfix">      
+      <div class = "header">            
+          <h1>Combining Toolboxes<br>17 April 2017<br> 9 to 12:30</h1>
+      </div>
+      <div class = "menu">      
+      <nav>
+          <ul>
+              <li><a href = "/">Home</a></li>
+              <li><a href = "/about.html">About Us</a></li>
+              <li><a href = "/workshop.html">Schedule</a></li>
+              <li><a href = "/outcomes.html">Outcomes</a></li>
+              <li><a href = "/signUp.html">Join Us</a></li>
+          </ul>
+      </nav>
+      </div>
+      </div>
+      <div class = "slogan">
+          <h2>Welcome!</h2>
+      </div>
+	      <p>Thank you for your interest! To aid in the facilitated networking section of the tutorial let us know what your research interests are by filling out this <a href = "https://goo.gl/forms/AZOkbe8dMhmH6y9p1">form</a>.</p>
+	      <p> See you in Waterloo Canada!</p>
       </body>
 </html>
