--- a/aba.html
+++ b/aba.html
@@ -6,6 +6,31 @@
             <link rel="stylesheet" type = "text/css" href="/css/main.css">
       </head>
       <body>
+	      <p>Baer, Wolf and Risley described Applied Behaviour Analysis as the science in
+which socially important behaviours are changed using a technology based on the
+principals of behaviour and experimentation. It includes the identification of a functional
+relationship between the behaviour and the environment, and interventions
+based on the functional assessment and empirically supported techniques which create
+antecedent strategies, teach replacement skills and attempt to change the reinforcement
+contingencies.</p><p> Applied Behaviour Analysis prides itself in solving socially important
+problems and has produced powerful interventions in fields such as autism,
+developmental disabilities, education, clinical psychology, and organizational behaviour
+management.
+      <div class = "slogan">
+          <h2>A substantial amount of research has supported the effectiveness of applied behaviour analysis.</h2>
+      </div> 
+	      <p>1. D. M. Baer, M. M. Wolf and T. R. Risley, "Some current dimensions of applied behavior
+analysis," Journal of applied behavior analysis, vol. 1, no. 1, pp. 91-97, 1968.<br> 2. The Ontario Association for Behaviour Analysis, "Evidence-based practices for
+individuals with autism spectrum disorder: Recommendations for caregivers,
+practitioners and policymakers," The Ontario Association for Behaviour Analysis, April
+2017. [Online]. Available: www.ontaba.org. [Accessed 19 November 2017].<br> 3. P. Friman, "Come on in, the water is fine: Achieving mainstream relevance through
+integration with primary care," The Behavior Analyst, pp. 19-36, 2010.<br> 4. A. Perry, A. Cummings, J. Dunn Geier, N. Freeman , S. Hughes, L. LaRose and J.
+Williams, "Effectiveness of intensive bahioral intervention in a large community-based
+program," Research in Autism Spectrum Disorders, vol. 4, no. 2, pp. 621-642, 2008 <br> 5. S. L. Odom, B. Boyd, L. Hall and K. Hume, "Evaluation of comprehensive treatment
+models for individuals with autism spectrum disorders," Journal of Autism and
+Developmental Disorders, vol. 40, no. 4, pp. 425-436, 2010. <br> 6. B. Reichow, "Overview of meta-analysis on early intensive behavioral intervention for
+young children with autism spectrum disorders," Journal of Autism and Developmental
+Disorders, vol. 42, no. 4, pp. 512-520, 2012. 
             
       </body>
 </html>
