--- a/aba.html
+++ b/aba.html
@@ -6,6 +6,22 @@
             <link rel="stylesheet" type = "text/css" href="/css/main.css">
       </head>
       <body>
+      <div class= "clearfix">      
+      <div class = "header">            
+          <h1>Combining Toolboxes<br>17 April 2017<br> 9 to 12:30</h1>
+      </div>
+      <div class = "menu">      
+      <nav>
+          <ul>
+              <li><a href = "/">Home</a></li>
+              <li><a href = "/about.html">About Us</a></li>
+              <li><a href = "/workshop.html">Schedule</a></li>
+              <li><a href = "/outcomes.html">Outcomes</a></li>
+              <li><a href = "/signUp.html">Join Us</a></li>
+          </ul>
+      </nav>
+      </div>
+      </div>
 	      <p>Baer, Wolf and Risley described Applied Behaviour Analysis as the science in
 which socially important behaviours are changed using a technology based on the
 principals of behaviour and experimentation. It includes the identification of a functional
