--- a/engg.html
+++ b/engg.html
@@ -6,6 +6,22 @@
             <link rel="stylesheet" type = "text/css" href="/css/main.css">
       </head>
       <body>
+      <div class= "clearfix">      
+      <div class = "header">            
+          <h1>Combining Toolboxes<br>17 April 2017<br> 9 to 12:30</h1>
+      </div>
+      <div class = "menu">      
+      <nav>
+          <ul>
+              <li><a href = "/">Home</a></li>
+              <li><a href = "/about.html">About Us</a></li>
+              <li><a href = "/workshop.html">Schedule</a></li>
+              <li><a href = "/signUp.html">Join Us</a></li>
+          </ul>
+      </nav>
+      </div>
+      </div>
+	      <p>Engineering is the application of science, through critical analysis and innovation, to design solutions to challenges. A list of renowned engineering achievements span from health care, to transportation, to outerspace. Due to the diverse nature of engineering, engineering professionals will often work in complex systems alongside other experts as part of a technical team.</p>       
             
       </body>
 </html>
