--- a/engg.html
+++ b/engg.html
@@ -21,7 +21,15 @@
       </nav>
       </div>
       </div>
-	      <p>Engineering is the application of science, through critical analysis and innovation, to design solutions to challenges. A list of renowned engineering achievements span from health care, to transportation, to outerspace. Due to the diverse nature of engineering, engineering professionals will often work in complex systems alongside other experts as part of a technical team.</p>       
+	      <p>Engineering is the application of science, through critical analysis and innovation, to design solutions to challenges. A list of renowned engineering achievements span from health care, to transportation, to outerspace. Due to the diverse nature of engineering, engineering professionals will often work in complex systems alongside other experts as part of a technical team.</p><p>Relating to 'user centred design' and Human Factors, there are several focued engineering tools and techniques that leverage technical knowledge, system analysis, and design.</p>
+	      <div class = "slogan">
+		      <h2>There are many examples in liturature relating to engineering.</h2>
+	      </div>
+	      <p>1.G. Andrews, "Canadian Professional Engineering and Geoscience Practive and Ethics," Nelson Education Ltd. Toronto, Canada. 2014.</p>
+	      <p>2.A. Bisantz, C. Burns, "Applications of Cognitive Work Analysis," Taylor & Francis Group. Boca Raton, U.S.A.. 2009.</p>
+	      <p>3.R.Fidel and A.M. Pejtersen, "From information behaviour research to the design of infomration systems: The cognitive work analysis framework," <i>Information Research</i>, vol.10, no. 1, Oct. 2004.</p>
+	      <p>4. T. Zeyl, E. Yin, M. Keightley, and T. Chau, “Partially supervised p300 speller adaptation for eventual stimulus timing optimization: target confidence is superior to error-related potential score as an uncertain label,” Journal of Neural Engineering, 2016.</p>
+	      <p>5. Y. Athavale and S. Krishnan, "Biosignal monitoring using wearables: Observation and opportunities," <i>Biomedical Signal Processing and Control</i>, vol. 38, pp.22-33, Sep. 2017.</p>
             
       </body>
 </html>
