--- a/signUp.html
+++ b/signUp.html
@@ -26,7 +26,7 @@
       </div>
 	      <p>Thank you for your interest! To aid in the facilitated networking section of the tutorial let us know what your research interests are by filling out this <a href = "https://goo.gl/forms/AZOkbe8dMhmH6y9p1">form</a>.</p>
 	      <br>
-	      <p><a href = "goo.gl/h8nLTLcontent_copyCopy short URL">REGISTER HERE</a></p>
+	      <p><a href = "http://www.persuasive2018.org/register/">REGISTER HERE</a></p>
 	      <br>
 	      <p> See you in Waterloo Canada!</p>
       </body>
