--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             </ul>
          </nav>
       </div>
-      <p> Greeting Persuasive Technology 2018 participants,<br>
-            Persuasive Technology 2018 is just around the corner!  We would like to take this opportunity to invite you to the Combining Toolboxes Tutorial.<br> 
-Within this interactive tutorial, strategies on combining the most powerful tools of applied behavioural analysis and engineering will be explored. We will address strategic approaches of each field through the frame of reference of one specific target challenge. This workshop will stimulate thoughts about how to engage within interprofessional teams to create inspired and dynamic designs which will influence behaviours and stimulate change.<br>
-We would like to invite professionals from diverse backgrounds in order to promote reflective thoughts and create an engaging networking and problem solving experience.</p>
+      <p> Greeting Persuasive Technology 2018 participants,</p>
+      <p>Persuasive Technology 2018 is just around the corner!  We would like to take this opportunity to invite you to the Combining Toolboxes Tutorial.</p> 
+      <p>Within this interactive tutorial, strategies on combining the most powerful tools of applied behavioural analysis and engineering will be explored. We will address strategic approaches of each field through the frame of reference of one specific target challenge. This workshop will stimulate thoughts about how to engage within interprofessional teams to create inspired and dynamic designs which will influence behaviours and stimulate change.</p>
+      <p>We would like to invite professionals from diverse backgrounds in order to promote reflective thoughts and create an engaging networking and problem solving experience.</p>
       
       </body>
 </html>
