--- a/workshop.html
+++ b/workshop.html
@@ -30,8 +30,8 @@
 				<th>Description</th>
 			   </tr>
 			   <tr>
-				<td>Coffee & Introductions</td>
-				<td>Grab a drink and take a seat! You will be divided in small groups to facilitate dicussion and introductions.</td>
+				<td>Introductions</td>
+				<td>You will be divided in small groups to facilitate dicussion and introductions.</td>
 			   </tr>
 		           <tr>
 				<td>Presentation, Challange Framing, & Questions</td>
@@ -39,7 +39,7 @@
 			   </tr>
 			   <tr>
 				<td>Concept Map Design</td>
-				<td>You will be presented with a target challenge, drawn from real life experiences, that highlights collaboration potential. You will be provided a 'Pro' licence to Mind Meister to facilitate brainstorming.</td>
+				<td>You will be presented with a target challenge, drawn from real life experiences, that highlights collaboration potential.</td>
 			   </tr>
 			   <tr>
 				   <td>Facilitated Networking</td>
